--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.5.5",
     "expo": "~52.0.15",
     "expo-av": "~15.0.1",
     "expo-file-system": "~18.0.4",
